tests/ui/span/E0805.stderr
error[E0805]: malformed `cfg` macro input
  --> $DIR/E0805.rs:2:8
   |
LL |     if cfg!(not()) { }
   |        ^^^^^^^^--^
   |        |       |
   |        |       expected a single argument here
   |        help: must be of the form: `cfg!(predicate)`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg-attribute>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0805`.
